<resources>
    <string name="app_name">Baby Shopping List</string>
    <string name="action_settings">Settings</string>
    <string name="add_item">Add Item</string>
    <string name="enter_item">Enter Item</string>
    <string name="hint_item">Enter item</string>
    <string name="hint_qty">Quantity</string>
    <string name="hint_color">Color</string>

    <string name="hint_size">Size</string>
    <string name="save_button">Save</string>
    <string name="no_text">No</string>
    <string name="sure_text">Are you sure?</string>
    <string name="Yes_text">Yes</string>
    <string name="edit_item">Edit Item</string>
    <string name="update_text">Update</string>
</resources>
